<resources>
    <string name="app_name">TaskApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="INPUT_LABEL_CONTENT">内容</string>
    <string name="DEFAULT_LABEL_DATE">----/--/--</string>
    <string name="DEFAULT_LABEL_TIME">--:--</string>
    <string name="LABEL_OK">決定</string>
    <string name="INPUT_LABEL_TITLE">タイトル</string>
    <string name="INPUT_LABEL_CATEGORY">カテゴリ</string>
    <string name="LABEL_CANCEL">キャンセル</string>
    <string name="LABEL_SEARCH">検索</string>
    <string name="CREATE_CATEGORY">カテゴリ作成</string>
</resources>