<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".InputActivity"
    tools:showIn="@layout/activity_input">

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/INPUT_LABEL_TITLE"
        android:importantForAutofill="no"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/select_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_edit_text"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="20" />

        <Button
            android:id="@+id/create_category_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/CREATE_CATEGORY" />
    </LinearLayout>

    <EditText
        android:id="@+id/content_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_category"
        android:hint="@string/INPUT_LABEL_CONTENT"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/date_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/content_edit_text"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/times_button"
        android:text="@string/DEFAULT_LABEL_DATE" />

    <Button
        android:id="@id/times_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/content_edit_text"
        android:layout_alignParentEnd="true"
        android:text="@string/DEFAULT_LABEL_TIME" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/times_button"
        android:layout_alignParentEnd="true"
        android:text="@string/LABEL_OK" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/times_button"
        android:layout_alignParentEnd="false"
        android:layout_toStartOf="@id/done_button"
        android:text="@string/LABEL_CANCEL" />

</RelativeLayout>
