<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CreateCategoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/category_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/INPUT_LABEL_CATEGORY"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/category_edit_text"
            android:layout_alignParentEnd="true"
            android:text="@string/LABEL_OK" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/category_edit_text"
            android:layout_alignParentEnd="false"
            android:layout_toStartOf="@id/done_button"
            android:text="@string/LABEL_CANCEL" />
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>